2004-07-17  Michael Gogins <gogins@pipeline.com>

	* Andres Cabrera added bank loading to vst4cs. I added plugin editor dialogs
	and program setting, also refined log message levels and made VST opcode
	diagnostic messages more informative.

2004-07-17  John ffitch  <jpff@codemist.co.uk>

	* OOps/dumpf.c (krdset): Allow strings from score
	and in kdmpset (4 cases each)

	* OOps/ugens9.c (pconvset): New code
	(pconvolve): New code

2004-07-13  John Fitch  <jpff@eriboll.local.>

	* InOut/widgets.cpp: Various changes to make __MACH__ machines be
	line Linux.
	(save_snap): Use fl_ask

2004-07-11  Michael Gogins <gogins@pipeline.com>

	* Added vst4cs plugin opcode by Andres Cabrera for hosting VST plugins
	  in Csound. Made a number of bug fixes and changes. More changes coming.
	  This is alpha code. Currently building only on mingw.

2004-07-09  John ffitch  <jpff@codemist.co.uk>

	* Engine/musmon.c (playevents): matt's suggestion to avoid missing
	events due to rounding.

	* OOps/ugrw1.c (itablew): Wrong result returned and elsewhere

	* Engine/otran.c (otran): Move initialisation of pool to start of
	otran so strings work!
	(constndx): from here

2004-07-04  John ffitch  <jpff@codemist.co.uk>

	* strings/all_strings: Added string 226

2004-07-04  Anthony Kozar <anthony.kozar@utoledo.edu>

	* Engine/sread.c (ifa): fixed bugs and improved error reporting in ^+
	and ^- code.

2004-06-27  Michael Gogins <gogins@pipeline.com>

	* Fixed (and simplified) real-time audio input.

2004-06-25  Michael Gogins <gogins@pipeline.com>

	* The CsoundVST Python module now prints Csound messages to Python
	sys.stdout when running in IDLE.

2004-06-25  Anthony Kozar <anthony.kozar@utoledo.edu>

	* These are all changes to allow compilation on MacOS 9
	
	* Top/csound.c:  In declaration of csoundExternalMidiRead(), made mbuf
	 unsigned char* to match other calls.

	* OOps/diskin.c: (newsndinset) changed if (sinfd > 0) to 
	if (sinfd != NULL).
