@@ -323,8 +323,12 @@ int pvsfreadset(PVSFREAD *p)
     MEMFIL   *mfp;
     float       *frptr,*memptr;          /* RWD pvocex format: MUST be 32bit */
 
-    if (*p->ifilno == SSTRCOD)                         /* if strg name given */
-      strcpy(pvfilnam, p->STRARG);                   /*   use that         */
+    if (*p->ifilno == SSTRCOD) {                     /* if strg name given */
+      if (p->STRARG!=NULL) 
+        strcpy(pvfilnam, p->STRARG);                 /*   use that         */
+      else 
+        strcpy(pvfilnam, unquote(currevent->strarg));
+    }
     else if ((long)*p->ifilno < strsmax && strsets != NULL &&
              strsets[(long)*p->ifilno])
       strcpy(pvfilnam, strsets[(long)*p->ifilno]);
