@@ -238,7 +238,10 @@ int vpvset(VPVOC *p)
         p->window = fltp;
     }
     if (*p->ifilno == SSTRCOD) {                       /* if strg name given */
+      if (p->STRARG!=NULL)
         strcpy(pvfilnam, unquote(p->STRARG));          /*   use that         */
+      else
+        strcpy(pvfilnam, unquote(currevent->strarg));
     }
     else if ((long)*p->ifilno <= strsmax && strsets != NULL &&
              strsets[(long)*p->ifilno]) {
